src/styles/desktop.css
/* Card */
@media only screen and (min-width: 1024px) {
	.dashboard__card {
		border-radius: 10px;
		padding: 15px 20px !important;
	}

	.card-content {
		display: flex;
		gap: 20px;
	}

	.card__income-expense {
		flex-grow: 1;
	}
}

/* End Card */

/* news */
.news-description {
	overflow: hidden;
	display: -webkit-box;
	text-overflow: ellipsis;
	-webkit-line-clamp: 4;
	-webkit-box-orient: vertical;
}

.news-source {
	position: absolute;
	background-color: #FFC045;
	font-size: 14px;
}

.news-link {
	background-color: #FFC045;
}

.news-container {
	min-height: 250px;
}

.cursor-p {
	cursor: pointer;
}

.news-img {
	width: 100%;
	height: 350px;
	object-fit: cover;
}

/* end of news */

/* savings money */
.bg-saving-color {
	background-color: #F2F2F2;
	border-radius: 10px;
	min-height: 200px;
}

.saving-image {
	width: 100%;
}

.saving-image__wrapper {
	max-width: 230px;
}

.saving-image-item {
	width: 100%;
}

.savings-planning {
	background-color: #D3D3D3;
	border-radius: 7px;
	width: fit-content;
}

/* end of saving money */

/* Detail Page */
.button__no-style {
	background-color: unset;
	border: unset;
}

/* End Detail Page */

/* Transaction Form */
.prev-category {
	background-color: #FFC045;
	transition: all 10s;
	width: fit-content;
}
/* End Transaction Form */

/* Not Found */
.not-found {
	height: 90vh;
}

.loading__animation {
	display: inline-block;
	width: 25px;
	height: 25px;
	background-color: #FFC045;
	border-radius: 100%;
	animation: breath 1s infinite;
}

.loading__container .loading__animation {
	width: 50px;
	height: 50px;
}

.loading__container {
	width: 100vw;
	height: 100vh;
}

@keyframes breath{
  0%{
    transform: scale(1);
  }

  50%{
    transform: scale(1.3);
  }
}
/* End Not Found */

/* Saving Count */
.saving-count__wrapper {
	background-color: #FFC045;
}
/* End Saving Count */

/* About */
.about-company__image {
	max-height: 300px;
}

.about__title {
	background-color: #FFC045;
	width: fit-content;
}

.about-underline__title {
	border-bottom: 5px solid #FFC045;
	width: fit-content;
}

.bg-grey {
	background-color: #f7f7f7;
}

.feature__image {
	max-height: 170px;
}
/* End About */

/* Teams */
.profile__item {
	border: 1px solid #c7c7c7;
	overflow: hidden;
	height: 100%;
}

.profile__item img {
	transition: all .5s;
	width: 100%;
}

.profile-image__wrapper {
	overflow: hidden;
	height: fit-content;
}

.profile__item img:hover {
	transform: scale(1.1);
}

.about-us {
	min-height: 90vh;
}

.profile-links {
	font-size: 30px;
}

.profile-links a {
	padding: 5px 10px;
	color: black;
	text-decoration: none;
}

.profile-links a:hover {
	color: #2b2b2b;
}
/* End Teams */

.transaction__content {
	min-height: 400px;
}

.change-transaction__button {
	width: 190px;
}

.empty-data__image {
	width: 100px;
}

